template engine 설정 완료

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@types/openid-client": "^3.7.0",
+    "ejs": "^3.1.5",
+    "openid-client": "^3.15.9",
     "passport": "^0.4.1",
     "passport-openid": "^0.4.0",
     "reflect-metadata": "^0.1.13",
